[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/roboto_mono_regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/enemies/enemy_normal.png" type="Texture" id=2]
[ext_resource path="res://assets/roboto_mono_italic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/Guide.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="Guide" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="."]
margin_left = 13.0
margin_top = 10.0
margin_right = 144.0
margin_bottom = 51.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Guide"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainLayer" type="CanvasLayer" parent="."]

[node name="Image" type="TextureRect" parent="MainLayer"]
margin_left = 242.0
margin_top = 207.0
margin_right = 370.0
margin_bottom = 335.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="MainLayer"]
margin_left = 522.0
margin_top = 200.0
margin_right = 831.0
margin_bottom = 257.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Normal Enemy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type" type="Label" parent="MainLayer"]
margin_left = 526.0
margin_top = 250.0
margin_right = 576.0
margin_bottom = 272.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "enemy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="MainLayer"]
margin_left = 527.0
margin_top = 279.0
margin_right = 1018.0
margin_bottom = 456.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
text = "This is the most common enemy you'll see while playing. The normal enemy doesn't have a whole lot going on: it just follows you at a moderate speed.

The main unique thing about this enemy is its ability to come in different sizes."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Previous" type="Button" parent="."]
margin_left = 550.0
margin_top = 514.0
margin_right = 619.0
margin_bottom = 585.0
text = "< Prev"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="."]
margin_left = 667.0
margin_top = 514.0
margin_right = 736.0
margin_bottom = 585.0
text = "Next >"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Previous" to="." method="_on_previousPressed"]
[connection signal="pressed" from="Next" to="." method="_on_nextPressed"]
